--- a/css/style.css
+++ b/css/style.css
@@ -1956,8 +1956,8 @@ background-color: #f2fdff;;
     margin: 75px 50px;
 }
 #wrap-login .transp-back-wrap-login {
-    max-width: 460px;
-    max-height: 755px;
+    width: 460px;
+    height: 755px;
     margin-top: -60px;
     margin-left: -34px;
     position: absolute;
